Fixed quiz website

--- a/quiz.html
+++ b/quiz.html
@@ -31,9 +31,7 @@
         <main>
         <fieldset>
             <legend>Multiple Choice</legend>
-        </main>
-
-            <label for="h2o"></label>What is the <em>scientific</em> name of H<sub>2</sub>O?</sup></li>
+            <label for="h2o"></label>What is the <em>scientific</em> name of H<sub>2</sub>O?</sup>
             <ul>
                 <li><input type="radio" id="q1answer1" name="user.h2o">Air</li>
                 <li><input type="radio" id="q1answer2" name="user.h2o">Fire</li>
