--- a/quiz.html
+++ b/quiz.html
@@ -19,50 +19,54 @@
 <body style="background-image: url(images/lightBackground.png); background-size: 100em;">
     <fieldset>
         <legend>Links to Other Pages</legend>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home Page</a></li>
-            <li><a href="quiz.html">Quiz</a></li>
-            <li><a href="survey.html">Survey</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="survey.html">Survey</a></li>
+            </ul>
+        </nav>
     </fieldset>
     <form action="survey.html" method="POST">
         <main>
-        <fieldset>
-            <legend>Multiple Choice</legend>
-            <label for="h2o"></label>What is the <em>scientific</em> name of H<sub>2</sub>O?</sup>
-            <ul>
-                <li><input type="radio" id="q1answer1" name="user.h2o">Air</li>
-                <li><input type="radio" id="q1answer2" name="user.h2o">Fire</li>
-                <li><input type="radio" id="q1answer3" name="user.h2o">Earth</li>
-                <li><input type="radio" id="q1answer4" name="user.h2o">Water</li>
-            </ul>
-            <label for="dec25"></label>What is the <em>most popular</em> name for Dec. 25<sup>th</sup>
-        <ul>
-                <li><input type="radio" id="q2answer1" name="user.dec25">Christams</li>
-                <li><input type="radio" id="q2answer2" name="user.dec25">Thanksgiving</li>
-                <li><input type="radio" id="q2answer3" name="user.dec25">Valentine's Day</li>
-                <li><input type="radio" id="q2answer4" name="user.dec25">Halloween</li>
-        </ul>
-            <label for="chemcode"></label>Which of the following is the chemical code for <strong>sugar?</strong>
-        <ul>
-                <li><input type="radio" id="chemcode1" name="user.chemcode">C<sub>12</sub>H<sub>22</sub>O<sub>11</sub></li>
-                <li><input type="radio" id="chemcode2" name="user.chemcode">C<sub>5</sub>H<sub>10</sub>O<sub>5</sub></li>
-                <li><input type="radio" id="chemcode3" name="user.chemcode">C<sub>6</sub>H<sub>12</sub>O<sub>6</sub></li>
-                <li><input type="radio" id="chemcode4" name="user.chemcode">C<sub>11</sub>H<sub>22</sub>O<sub>11</sub></li>
-        </ul>
+            <fieldset>
+                <legend>Multiple Choice</legend>
+                <label for="h2o"></label>What is the <em>scientific</em> name of H<sub>2</sub>O?</sup>
+                <ul>
+                    <li><input type="radio" id="q1answer1" name="user.h2o">Air</li>
+                    <li><input type="radio" id="q1answer2" name="user.h2o">Fire</li>
+                    <li><input type="radio" id="q1answer3" name="user.h2o">Earth</li>
+                    <li><input type="radio" id="q1answer4" name="user.h2o">Water</li>
+                </ul>
+                <label for="dec25"></label>What is the <em>most popular</em> name for Dec. 25<sup>th</sup>
+                <ul>
+                    <li><input type="radio" id="q2answer1" name="user.dec25">Christams</li>
+                    <li><input type="radio" id="q2answer2" name="user.dec25">Thanksgiving</li>
+                    <li><input type="radio" id="q2answer3" name="user.dec25">Valentine's Day</li>
+                    <li><input type="radio" id="q2answer4" name="user.dec25">Halloween</li>
+                </ul>
+                <label for="chemcode"></label>Which of the following is the chemical code for <strong>sugar?</strong>
+                <ul>
+                    <li><input type="radio" id="chemcode1"
+                            name="user.chemcode">C<sub>12</sub>H<sub>22</sub>O<sub>11</sub></li>
+                    <li><input type="radio" id="chemcode2" name="user.chemcode">C<sub>5</sub>H<sub>10</sub>O<sub>5</sub>
+                    </li>
+                    <li><input type="radio" id="chemcode3" name="user.chemcode">C<sub>6</sub>H<sub>12</sub>O<sub>6</sub>
+                    </li>
+                    <li><input type="radio" id="chemcode4"
+                            name="user.chemcode">C<sub>11</sub>H<sub>22</sub>O<sub>11</sub></li>
+                </ul>
 
-        <label for="even"></label>Which of the following are <strong>even?</strong>
-        <ul>
-                
-                <li><input type="checkbox" id="even1" name="user.even.1">1<sup>st</sup></li>
-                <li><input type="checkbox" id="even2" name="user.even.2">2<sup>nd</sup></li>
-                <li><input type="checkbox" id="even3" name="user.even.3">3<sup>rd</sup></li>
-                <li><input type="checkbox" id="even4" name="user.even.4">4<sup>th</sup></li>
-        </ul>
-        <button type="submit">Submit</button>
-        </fieldset>
+                <label for="even"></label>Which of the following are <strong>even?</strong>
+                <ul>
+
+                    <li><input type="checkbox" id="even1" name="user.even.1">1<sup>st</sup></li>
+                    <li><input type="checkbox" id="even2" name="user.even.2">2<sup>nd</sup></li>
+                    <li><input type="checkbox" id="even3" name="user.even.3">3<sup>rd</sup></li>
+                    <li><input type="checkbox" id="even4" name="user.even.4">4<sup>th</sup></li>
+                </ul>
+                <button type="submit">Submit</button>
+            </fieldset>
     </form>
 </body>
 
